--- a/fixtures/users.toml
+++ b/fixtures/users.toml
@@ -14,7 +14,7 @@ name = "users"
       updated_at = "<%= now() %>"
 
     [[scenario.table.row]]
-      id = "<%= uuid() %>"
+      id = "<%= uuidNamed("ted") %>"
       email = "ted@beexcellent.com"
       password_hash = "<%= hash("beexcellent") %>"
       name = "Theodore Logan"
@@ -28,3 +28,7 @@ name = "users"
     [[scenario.table.row]]
       id = "supersecretrefreshtoken"
       user_id = "<%= uuidNamed("bill") %>"
+
+    [[scenario.table.row]]
+      id = "tedssupersecretrefreshtoken"
+      user_id = "<%= uuidNamed("ted") %>"
